css/findings.css
body{
    background-color: rgb(35,35,35);
    
}
div.content{
    margin: 0 auto;
    width: 75vw;
}

div.content h1{
    color: white;
}
.clearfix:after{
    content:"";
    display: table;
    clear:both;
}
header{
    text-align: center;
    background-color:#fff;
    padding: 10px;
    color: #1a71b8;
}

article{
    background: white;
    padding: 20px;
    margin: 30px 0;
    
}
article img{
    height: 200px;
    width: auto;
    display: block;
    
}
article p{
    margin: 0 0 1em;    
}

section.post-head{
    display:block;
    margin: 0 0 20px;
    padding: 0 0 20px;
    border-bottom: 1px solid #333;
    color:rgb(150,150,150);
}

section.post-body{
 
}

footer{
    text-align:center;
    color:rgb(200,200,200);
    margin: 50px;
}
/* Big screen desktop*/
@media only screen and (min-width:1024px){
    article{padding: 3vw; margin: 3vw 0;}
    
}
/*mobile phones*/
@media only screen and (min-device-width:375px) and (max-device-width:667px){
    article{padding:5vw; margin: 5vw 0;}
    
    
    
}
/*tablet and small size desktop*/
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px){
    article{padding: 5vw; margin: 5vh 0;}
    
}

